# PixelFrame

./: .gitignore  README.md  demo-config.yml  pixelframe.yml  pyproject.toml
.github/workflows/: pixelframe.yml
pixelframe/: __init__.py
pixelframe/cli/: main.py
pixelframe/engine/: browser.py  capture.py  composite.py  config.py  config_loader.py  devices.py  diff.py  logger.py  report.py  run_manager.py
pixelframe/templates/: diff_report.html  report.html
